<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Challenge4android</string>
    <string name="action_settings">Settings</string>
    <string name="enter_ip">Enter IP Address here</string>
    <string name="enter_port">Enter Port here</string>
    <string name="server_connect">Connect</string>
    <string name="welcome_header">Server Connector</string>
    <string name="title_activity_chat">Chat</string>
    <string name="chat_disconnect">Disconnect</string>
    <string name="chat_clear">Clear</string>
    <string name="chat_send">Send</string>

</resources>
