<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/display"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_header"
        android:id="@+id/textView"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|text"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/enter_ip" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/enter_port" />

    <Button
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:text="@string/server_connect"
        android:id="@+id/button2"
        android:onClick="connectToServer"/>

    <TextView
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

</LinearLayout>
