<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tungala.challenge4android.Chat"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:id="@+id/scrollView"
        android:layout_weight="1.00">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.08" />
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:hint="Enter message here"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_send"
            android:id="@+id/button4"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/chat_disconnect"
            android:id="@+id/button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/chat_clear"
            android:id="@+id/button3"
            android:layout_weight="1"/>
    </LinearLayout>
 </LinearLayout>
